--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #dedede;
+}
+body,
+input,
+button {
+  font-family: sans-serif;
+}
+:root {
+  --black: #000000;
+  --white: white;
+  --gray: #646464;
+  --lightGray: rgb(204, 204, 204);
+  --transition: all ease 0.4s;
+}
+button {
+  background: var(--black);
+  color: var(--white);
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 14px;
+  font-weight: 700;
+  transition: var(--transition);
+}
+button:hover {
+  background-color: #dedede;
+  color: var(--black);
+}
+button svg {
+  margin-left: 10px;
+}
+.takenItemBtn,
+.takenItemBtn:hover {
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  background: var(--lightGray);
+  color: var(--black);
+  border-radius: 5px;
+  cursor: no-drop;
 }
